--- a/.htaccess
+++ b/.htaccess
@@ -3,3 +3,4 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteRule ^([^\.]+)$ $1.php [NC,L]
 RedirectMatch 301 ^/WebDev/AppSolutions/php/phpComponents /WebDev/AppSolutions/php/home
 ErrorDocument 404 /WebDev/AppSolutions/php/404.php
+Redirect 301 /WebDev/AppSolutions/php/getDeviceType /WebDev/AppSolutions/php/home
